--- a/index.html
+++ b/index.html
@@ -4,21 +4,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Olá!! Eu sou o Allan</title>
+    <title>Allan CV</title>
+
+    <link rel="stylesheet" href="style.css">
+
 </head>
 <body>
-    <h1>h1 Eu sou o corpo</h1>
-    <h2>h2 Eu sou o corpo</h2>
-</body>
-<ol>
-    <li>Cafe</li>
-    <li>Chá</li>
-    <li>Leite</li>
-</ol>
-<ul>
-    <li>Cafe</li>
-    <li>Chá</li>
-    <li>Leite</li>
-</ul>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profile-image.png" alt="Profile image">
+                    <p class="name">Allan Correa</p>
+                    <p class="profession">Software Engineer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 43 99999-3965</li>
+                        <li><i class="fa fa-envelope"></i>allan@gmail.com</li>
+                        <li><i class="fa fa-globe"></i>www.allan.com</li>
+                        <li><i class="fa fa-github"></i>https://github.com/AllanJrCorrea</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Git & GitHub</p></li>
+                        <li><p>Linux</p></li>
+                    </ul>
+                </div>
+            </section>
+        </section>
+            <section class="right-section">
+                <div class="right-section-contents">
+                    <section class="about gap">
+                        <div class="right-title">Sobre Mim</div>
+                        <p class="about-me-contents">
+                            Olá sou o Allan.<br>
+                            <br> Um pouco mais sobre o que faço
+                            <br> Qual são minhas competências
 
+                        </p>
+                    </section>
+
+                </div>
+
+            </section>
+
+    </main>
+</body>
 </html>
