--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +10,7 @@
     <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -30,25 +32,29 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Git & GitHub</p></li>
-                        <li><p>Linux</p></li>
+                        <li>
+                            <p>HTML, CSS, Git & GitHub</p>
+                        </li>
+                        <li>
+                            <p>Linux</p>
+                        </li>
                     </ul>
                 </div>
             </section>
         </section>
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">Sobre Mim</div>
-                        <p class="about-me-contents">
-                            Olá sou o Allan.<br>
-                            <br> Um pouco mais sobre o que faço
-                            <br> Qual são minhas competências
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div>
+                    <p class="about-me-contents">
+                        Olá sou o Allan.<br>
+                        <br> Um pouco mais sobre o que faço
+                        <br> Qual são minhas competências
 
-                        </p>
-                    </section>
+                    </p>
+                </section>
 
-                </div>
+            </div>
             <section class="experience gap">
                 <div class="rigth-title">Experiência</div>
                 <div class="experience-contents">
@@ -73,10 +79,39 @@
                         </p>
                     </div>
                 </div>
-                
+
             </section>
+            <section class="education gap">
+                <div class="right-title">Formação Academica</div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">PUC Minas</p>
+                        <p class="educationp-time-period">2021~2023</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Engenharia de Software</p>
+                        <p class="education-desc">
+                            Pós graduação em engenharia de software...
+                        </p>
+                    </div>
+                </div>
+                <div class="education-contents">
+                    <div class="education-left">
+                        <p class="education-school-name">Mackenzie</p>
+                        <p class="educationp-time-period">2018-2021</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Big Data</p>
+                        <p class="education-desc">
+                            Pós graduação em Big Data...
+                        </p>
+                    </div>
+                </div>
             </section>
+
+        </section>
 
     </main>
 </body>
+
 </html>
