--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
                     <p class="left-title">Skills</p>
                     <ul>
                         <li><p>HTML, CSS, Git & GitHub</p></li>
-                        <li><p>Linux</p></li>
+                        <li><p>JavaScript, React, Node.js</p></li>
+                        <li><p>React Native, SQL, Postgre</p></li>
                     </ul>
                 </div>
             </section>
@@ -61,9 +62,9 @@
                         <p class="exp-company-name">2021-Present</p><br><br><br><br>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-position">Engenheiro de Software</p><br>
                         <p class="exp-desc">
-                            Descreva aqui as principais atividades
+                            Atuando em um squad multidisciplinar focado em desenvolver a experiência do futuro em eCommerces.
                         </p>
                     </div>
                     <div class="exp-left">
@@ -71,9 +72,9 @@
                         <p class="exp-company-name">2017-2021</p>
                     </div>
                     <div class="exp-right">
-                        <p class="exp-position">Engenheiro de Software</p>
+                        <p class="exp-position">Engenheiro de Software</p><br>
                         <p class="exp-desc">
-                            Descreva aqui as principais atividades da empresa 02
+                            Atuando no desenvolvimento do Meta Verso, focado na criação de eCommerces dentro do mundo virtual.
                         </p>
                     </div>
                 </div>
@@ -87,7 +88,7 @@
                         <p class="awards-time-period">Junho de 2018</p><br><br><br><br>
                     </div>
                     <div class="awards-right">
-                        <p class="awards-name">Curso de UX</p>
+                        <p class="awards-name">Curso de UX</p><br>
                         <p class="awards-desc">
                            Curso feito na EBAC no ano de 2022
                         </p>
@@ -98,7 +99,7 @@
                         <p class="awards-time-period">Maio de 2022</p>
                     </div>
                     <div class="awards-right">
-                        <p class="awards-name">Curso Engenhiro Front-end</p>
+                        <p class="awards-name">Curso Engenhiro Front-end</p><br>
                         <p class="awards-desc">
                            Curso feito na EBAC no ano de 2022
                         </p>
