--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="stylesheet" href="style.css">
 
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
@@ -28,7 +30,7 @@
                         <li><i class="fa fa-phone"></i>+55 43 99999-1010</li>
                         <li><i class="fa fa-envelope"></i>allan@gmail.com</li>
                         <li><i class="fa fa-globe"></i>www.allan.com</li>
-                        <li><i class="fa fa-github"></i>https://github.com/AllanJrCorrea</li>
+                        <li><i class="fa fa-github"></i>https://github.com/AllanJrCorrea</li><br><br>
                     </ul>
                 </div>
                 <div class="skills">
@@ -46,8 +48,8 @@
                     <section class="about gap">
                         <div class="right-title">Sobre Mim</div><br>
                         <p class="about-me-contents">
-                            Olá sou o Allan. Um pouco mais sobre o que faço. Qual são minhas competências<br><br>
-                            Olá sou o Allan. Um pouco mais sobre o que faço. Qual são minhas competências.
+                            Olá sou o Allan. Um pouco mais sobre o que faço. Qual são minhas competências, Noções em orientação a objetos;Noções de Banco de Dados relacional; Noções de Programação Concorrente Distribuída.<br><br>
+                            Alguma experiência com desenvolvimento em .NET (C#, Asp.NET MVC, Web API, Entity Framework); Interesse em aprender outras linguagens e tecnologias;Frameworks javascript (AngularJS, React, etc.).
                         
                         </p>
 
@@ -104,6 +106,33 @@
                            Curso feito na EBAC no ano de 2022
                         </p>
 
+                    </div>
+                </div>
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Certificados</div><br>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">Elastic</p><br>
+                        <p class="awards-time-period">Junho de 2018</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Elasticsearch Engineer I & II</p><br>
+                        <p class="awards-desc">
+                            Curso sobre as principais ferramentas da stack da elastic...
+                        </p>
+                    </div>
+                </div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">Cloud Academy Inc.</p><br>
+                        <p class="awards-time-period">Novembro de 2021</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Docker in Depth</p><br>
+                        <p class="awards-desc">
+                            Curso sobre os principais comandos Docker...
+                        </p>
                     </div>
                 </div>
             </section>
