--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <section class="left-section-content">
                 <div class="profile">
                     <img class="profile-image" src="img/profile-image.png" alt="Profile image"><br><br>
-                    <p class="name">Allan <br> Correa</p> <br>
+                    <p class="name">Allan <br> Correa</p> <br><br>
                     <p class="profession">Engenheiro de Software</p> <br>
                 </div>
                 <div class="contact-info"><br>
